--- a/src/main/resources/templates/getItem.html
+++ b/src/main/resources/templates/getItem.html
@@ -3,6 +3,7 @@
 <script src="https://js.stripe.com/v3/"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+<script type="text/javascript" th:src="@{/login.js}"></script>
 
 <link th:href="@{/common.css}" rel="stylesheet"/>
 <style>
@@ -40,6 +41,7 @@
 <section>
     <h1>Item Details</h1>
     <div id="item-details">
+        <div id="image-div"></div>
         <h3 th:text="'Name: ' + ${item.name}"></h3>
         <h3 th:text="'Description: ' + ${item.description}"></h3>
         <h3 th:text="'Current Bid: $' + ${item.currentBid}"></h3>
@@ -63,75 +65,6 @@
 
 
         <p id="demo"></p>
-    </div>
-
-    <script th:inline="javascript">
-        /*<![CDATA[*/
-        var itemName = /*[[${item.name}]]*/ '';
-        var auctionEndTimeString = /*[[${item.auctionEndTime}]]*/ '';
-        /*]]>*/
-    </script>
-
-
-    <script>
-        $(document).ready(function() {
-
-            $.ajax({
-                url: '/loggedUserID',
-                type: 'GET',
-                success: function(response) {
-                    console.log(response);
-                    if (response.userId !== '') {
-
-                        $('input[name="userId"]').val(response.userId);
-                        console.log(response.userId);
-                    } else {
-                        alert('You need to log in or register to place a bid.');
-                    }
-                },
-                error: function() {
-                    console.error('Error checking logged-in status.');
-                }
-            });
-
-
-            $('#bidForm').submit(function(e) {
-
-                if ($('input[name="userId"]').val() === '') {
-                    e.preventDefault(); // Prevent form submission
-                    alert('You need to log in or register to place a bid.');
-                } else {
-
-                    var userId = $('input[name="userId"]').val();
-                    var actionUrl = '/updateBid/' + itemName + '/' + userId + '/' + $('input[name="bidAmount"]').val();
-                    $('#bidForm').attr('action', actionUrl);
-                }
-            });
-        });
-    </script>
-
-
-    <script>
-        $(document).ready(function() {
-            var auctionEndTime = new Date(auctionEndTimeString).getTime();
-
-            var x = setInterval(function() {
-                var now = new Date().getTime();
-                var distance = auctionEndTime - now;
-                var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-                var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-                var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-                document.getElementById("auctionEndTimer").innerHTML = "Time Remaining to make a bid: " + days + "d " + hours + "h " + minutes + "m " + seconds + "s";
-
-                if (distance < 0) {
-                    clearInterval(x);
-                    document.getElementById("auctionEndTimer").innerHTML = "Auction Ended";
-                }
-            }, 1000);
-        });
-    </script>
 
     </div>
 </section>
