More payment method view/manage updates. More to come.

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -9,6 +9,7 @@
     <link th:href="@{/styling.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/login.js}"></script>
     <script type="text/javascript" th:src="@{/userId.js}"></script>
+    <script type="text/javascript" th:src="@{/paymentMethods.js}"></script>
 </head>
 <body>
 <header>
