Added a contact file and made changes to other html files that referenced the contact file

--- a/src/main/resources/templates/confirmation.html
+++ b/src/main/resources/templates/confirmation.html
@@ -15,7 +15,7 @@
             <a href="/register-page">Register</a>
             <a href="/login-page">Login</a>
             <a href="/addItem">Create</a>
-            <a href="#contact">Contact</a>
+            <a href="/contact">Contact</a>
             <span style="float:right; color: white" th:text="${welcome}"></span>
         </ul>
     </div>
