--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -17,7 +17,7 @@
             <a href="/auctions-page">Auctions</a>
             <a href="/register-page">Register</a>
             <a href="/addItem">Create</a>
-            <a href="#contact">Contact</a>
+            <a href="/contact">Contact</a>
             <div id="user" class="dropdown" style="float:right; color: white"></div>
         </ul>
     </div>
