--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -16,7 +16,7 @@
             <a href="/auctions-page">Auctions</a>
             <a href="/register-page">Register</a>
             <a class="active">Create</a>
-            <a href="#contact">Contact</a>
+            <a href="/contact">Contact</a>
             <div id="user" class="dropdown" style="float:right; color: white"></div>
         </ul>
     </div>
