--- a/src/main/resources/templates/auctionList.html
+++ b/src/main/resources/templates/auctionList.html
@@ -99,7 +99,7 @@
             <a class="active">Auctions</a>
             <a href="/register-page">Register</a>
             <a href="/addItem">Create</a>
-            <a href="#contact">Contact</a>
+            <a href="/contact">Contact</a>
             <div id="user" class="dropdown" style="float:right; color: white"></div>
         </ul>
     </div>
