--- a/src/main/resources/templates/registrationConfirmation.html
+++ b/src/main/resources/templates/registrationConfirmation.html
@@ -28,7 +28,7 @@
             <a href="/register-page">Register</a>
             <a href="/login-page">Login</a>
             <a href="/addItem">Create</a>
-            <a href="#contact">Contact</a>
+            <a href="/contact">Contact</a>
         </ul>
     </div>
 </header>
