--- a/src/main/resources/templates/getItem.html
+++ b/src/main/resources/templates/getItem.html
@@ -3,10 +3,15 @@
 <script src="https://js.stripe.com/v3/"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-<script type="text/javascript" th:src="@{/login.js}"></script>
 
 <link th:href="@{/common.css}" rel="stylesheet"/>
 <style>
+
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
@@ -20,6 +25,60 @@
     h1 {
       text-align: center;
     }
+
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgb(0,0,0);
+      background-color: rgba(0,0,0,0.4);
+      padding-top: 60px;
+    }
+
+    .modal-content {
+      background-color: #fefefe;
+      margin: 5% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%;
+    }
+
+    .close {
+      color: #aaaaaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: #000;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    .open-button {
+      background-color: #555;
+      color: white;
+      padding: 16px 20px;
+      border: none;
+      cursor: pointer;
+      opacity: 0.8;
+      position: fixed;
+      bottom: 23px;
+      right: 28px;
+      width: 280px;
+    }
+
+    .open-button:hover {
+      opacity: 1;
+    }
+
 </style>
 <head>
     <meta charset="UTF-8">
@@ -34,18 +93,17 @@
             <a href="/register-page">Register</a>
             <a href="/login-page">Login</a>
             <a href="/addItem">Create</a>
-            <a href="/contact">Contact</a>
+            <a href="#contact">Contact</a>
         </ul>
     </div>
 </header>
 <section>
     <h1>Item Details</h1>
     <div id="item-details">
-        <div id="image-div"></div>
+        <img src="${item.image}" alt="${item.name}">
         <h3 th:text="'Name: ' + ${item.name}"></h3>
         <h3 th:text="'Description: ' + ${item.description}"></h3>
         <h3 th:text="'Current Bid: $' + ${item.currentBid}"></h3>
-        <h3 th:text="'Color: ' + ${item.color}"></h3>
         <h3 th:text="'Auction Start Time: ' + ${item.auctionStartTime}"></h3>
         <h3 th:text="'Auction End Time: ' + ${item.auctionEndTime}"></h3>
         <h3 th:if="${item.auctionComplete}">Auction Status: Complete</h3>
@@ -53,18 +111,113 @@
         <div id="auctionStartTimer"></div>
         <div id="auctionEndTimer"></div>
 
-        <form id="bidForm" th:action="@{'/updateBid/' + ${item.name} + '/' + ${userId} + '/' + ${item.currentBid}}" method="post">
-            <input type="hidden" name="name" th:value="${item.name}" />
-            <input type="hidden" name="bidAmount" id="bidAmountInput" th:value="${item.currentBid}" />
-            <input type="hidden" name="userId" th:value="${userId}" />
+        <button id="bidButton">Place Bid</button>
 
-         <label for="newBidAmountInput">Enter Bid Amount:</label>
-            <input type="number" name="newBidAmount" id="newBidAmountInput" required />
-            <button type="submit">Place Bid</button>
-        </form>
 
+        <div id="bidModal" class="modal">
+
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h2>Bid Form</h2>
+                <form id="bidForm" th:action="@{'/updateBid/' + ${item.name} + '/' + ${userId} + '/' + ${item.currentBid}}" method="post">
+                    <input type="hidden" name="name" th:value="${item.name}" />
+                    <input type="hidden" name="bidAmount" id="bidAmountInput" th:value="${item.currentBid}" />
+                    <input type="hidden" name="userId" th:value="${userId}" />
+                    <label for="newBidAmountInput">Enter Bid Amount:</label>
+                    <input type="number" name="newBidAmount" id="newBidAmountInput" required />
+                    <button type="submit">Place Bid</button>
+                </form>
+            </div>
+        </div>
 
         <p id="demo"></p>
+    </div>
+
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        var itemName = /*[[${item.name}]]*/ '';
+        var auctionEndTimeString = /*[[${item.auctionEndTime}]]*/ '';
+        /*]]>*/
+    </script>
+
+    <script>
+
+        $(document).ready(function() {
+            $('#bidButton').click(function() {
+                $('#bidModal').css("display", "block");
+            });
+
+            $('.close').click(function() {
+                $('#bidModal').css("display", "none");
+            });
+
+            $(window).click(function(event) {
+                if (event.target == $('#bidModal')[0]) {
+                    $('#bidModal').css("display", "none");
+                }
+            });
+
+
+        });
+    </script>
+
+    <script>
+        $(document).ready(function() {
+
+            $.ajax({
+                url: '/loggedUserID',
+                type: 'GET',
+                success: function(response) {
+                    console.log(response);
+                    if (response.userId !== '') {
+
+                        $('input[name="userId"]').val(response.userId);
+                        console.log(response.userId);
+                    } else {
+                        alert('You need to log in or register to place a bid.');
+                    }
+                },
+                error: function() {
+                    console.error('Error checking logged-in status.');
+                }
+            });
+
+            $('#bidForm').submit(function(e) {
+                if ($('input[name="userId"]').val() === '') {
+                    e.preventDefault(); // Prevent form submission
+                    alert('You need to log in or register to place a bid.');
+                } else {
+                    var userId = $('input[name="userId"]').val();
+                    var actionUrl = '/updateBid/' + itemName + '/' + userId + '/' + $('input[name="newBidAmount"]').val(); // Use newBidAmount input field
+                    $('#bidForm').attr('action', actionUrl);
+                }
+            });
+        });
+    </script>
+
+
+    <script>
+        $(document).ready(function() {
+            var auctionEndTime = new Date(auctionEndTimeString).getTime();
+
+            var x = setInterval(function() {
+                var now = new Date().getTime();
+                var distance = auctionEndTime - now;
+                var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+                var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+                var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+                document.getElementById("auctionEndTimer").innerHTML = "Time Remaining to make a bid: " + days + "d " + hours + "h " + minutes + "m " + seconds + "s";
+
+                if (distance < 0) {
+                    clearInterval(x);
+                    document.getElementById("auctionEndTimer").innerHTML = "Auction Ended";
+                }
+            }, 1000);
+        });
+    </script>
+
 
     </div>
 </section>
