--- a/src/main/resources/templates/auctionList.html
+++ b/src/main/resources/templates/auctionList.html
@@ -9,7 +9,8 @@
     <script type="text/javascript" th:src="@{/AuctionList.js}"></script>
 
 </head>
-<script>"https://code.jquery.com/jquery-3.6.4.min.js"
+<script>
+ "https://code.jquery.com/jquery-3.6.4.min.js"
 "https://js.stripe.com/v3/"
 
     document.addEventListener("DOMContentLoaded", function() {
