--- a/src/main/resources/templates/getItem.html
+++ b/src/main/resources/templates/getItem.html
@@ -30,12 +30,9 @@
         <h3 th:text="'Name: ' + ${item.name}"></h3>
         <h3 th:text="'Description: ' + ${item.description}"></h3>
         <h3 th:text="'Current Bid: $' + ${item.currentBid}"></h3>
-        <h3 th:text="'Auction Start Time: ' + ${auctionStartTimeFormatted}"></h3>
-        <h3 th:text="'Auction End Time: ' + ${auctionEndTimeFormatted}"></h3>
-        <h3 th:if="${item.auctionComplete}">Auction Status: Complete</h3>
         <h3 th:unless="${item.auctionComplete}">Auction Status: Incomplete</h3>
-        <h3 th:text="'Auction Start Time: ' + auctionStartTimeFormatted"></h3>
-        <h3 th:text="'Auction End Time: ' + auctionEndTimeFormatted"></h3>
+        <h3>Auction Start Time: <span id="auctionStartTimeFormatted"></span></h3>
+        <h3>Auction End Time: <span id="auctionEndTimeFormatted"></span></h3>
         <p id="demo"></p>
         <button id="bidButton">Place Bid</button>
 
@@ -48,14 +45,11 @@
                     <label for="newBidAmountInput">Enter Bid Amount:</label>
                     <input type="number" name="newBidAmount" id="newBidAmountInput" required />
 
-                    <label for="cardholderName">Cardholder Name:</label>
-                    <input type="text" name="cardholderName" id="cardholderName" required />
-
-                    <label for="cardNumber">Card Number:</label>
-                    <input type="text" name="cardNumber" id="cardNumber" required />
-
-                    <label for="expiryDate">Expiry Date:</label>
-                    <input type="text" name="expiryDate" id="expiryDate" required />
+                    <!-- Dropdown for payment methods -->
+                    <label for="paymentMethod">Choose Payment Method:</label>
+                    <select name="paymentMethod" id="paymentMethod">
+                        <!-- Options will be dynamically populated using JavaScript -->
+                    </select>
 
                     <label for="cvv">CVV:</label>
                     <input type="text" name="cvv" id="cvv" required />
@@ -73,9 +67,18 @@
         var itemName = /*[[${item.name}]]*/ '';
         var auctionStartTimeString = /*[[${item.auctionStartTime}]]*/ '';
         var auctionEndTimeString = /*[[${item.auctionEndTime}]]*/ '';
-        var auctionStartTimeFormatted = moment(auctionStartTimeString).format('YYYY-MM-DD HH:mm');
-        var auctionEndTimeFormatted = moment(auctionEndTimeString).format('YYYY-MM-DD HH:mm');
+       var auctionStartTimeFormatted = moment(auctionStartTimeString).format('YYYY-MM-DD');
+    var auctionEndTimeFormatted = moment(auctionEndTimeString).format('YYYY-MM-DD');
+
         /*]]>*/
+    </script>
+
+    <script>
+        $(document).ready(function() {
+            // Display formatted auction start time and end time
+            $('#auctionStartTimeFormatted').text(auctionStartTimeFormatted);
+            $('#auctionEndTimeFormatted').text(auctionEndTimeFormatted);
+        });
     </script>
 
     <script>
@@ -133,36 +136,59 @@
 
     <script>
         $(document).ready(function() {
+       // Fetch user ID
+       $.ajax({
+           url: '/loggedUserID',
+           type: 'GET',
+           success: function(response) {
+               console.log(response);
+               if (response.userId !== '') {
+                   const userId = response.userId;
 
-            $.ajax({
-                url: '/loggedUserID',
-                type: 'GET',
-                success: function(response) {
-                    console.log(response);
-                    if (response.userId !== '') {
+                   // Populate payment methods dropdown
+                   fetch('/retrieve-payment-methods?userId=' + userId)
+                       .then(response => {
+                           if (!response.ok) {
+                               throw new Error('Failed to retrieve payment methods');
+                           }
+                           return response.json();
+                       })
+                       .then(data => {
+                           const paymentMethodSelect = $('#paymentMethod');
+                           data.forEach(paymentMethod => {
+                               const option = $('<option></option>').text('Card ending with ' + paymentMethod.cardNumber.slice(-4));
+                               paymentMethodSelect.append(option);
+                           });
+                       })
+                       .catch(error => {
+                           console.error('Error fetching payment methods:', error);
+                       });
 
-                        $('input[name="userId"]').val(response.userId);
-                        console.log(response.userId);
-                    } else {
-                        alert('You need to log in or register to place a bid.');
-                    }
-                },
-                error: function() {
-                    console.error('Error checking logged-in status.');
-                }
-            });
+                   // Set user ID in the bid form
+                   $('input[name="userId"]').val(userId);
+                   console.log(userId);
+               } else {
+                   alert('You need to log in or register to place a bid.');
+               }
+           },
+           error: function() {
+               console.error('Error checking logged-in status.');
+           }
+       });
 
-            $('#bidForm').submit(function(e) {
-                if ($('input[name="userId"]').val() === '') {
-                    e.preventDefault(); // Prevent form submission
-                    alert('You need to log in or register to place a bid.');
-                } else {
-                    var userId = $('input[name="userId"]').val();
-                    var actionUrl = '/updateBid/' + itemName + '/' + userId + '/' + $('input[name="newBidAmount"]').val(); // Use newBidAmount input field
-                    $('#bidForm').attr('action', actionUrl);
-                }
-            });
-        });
+       // Handle bid form submission
+       $('#bidForm').submit(function(e) {
+           if ($('input[name="userId"]').val() === '') {
+               e.preventDefault(); // Prevent form submission
+               alert('You need to log in or register to place a bid.');
+           } else {
+               var userId = $('input[name="userId"]').val();
+               var actionUrl = '/updateBid/' + itemName + '/' + userId + '/' + $('input[name="newBidAmount"]').val(); // Use newBidAmount input field
+               $('#bidForm').attr('action', actionUrl);
+           }
+       });
+   });
+
     </script>
 
     <script>
