Added wishlist table in sql and made some changes to the previous tables to make sure we don't get an error when using them in the database

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -17,7 +17,7 @@
             <a href="/auctions-page">Auctions</a>
             <a href="/register-page">Register</a>
             <a href="/create-page">Create</a>
-            <a href="/active">Contact</a>
+            <a class="/active">Contact</a>
             <div id="user" class="dropdown" style="float:right; color: white"></div>
         </ul>
     </div>
@@ -38,6 +38,12 @@
 </p><p>
     Marcus Williams: Frontend developer
 </p>
+<pre>
+
+
+
+    Contact us at oldworldhelp@outlook.com
+</pre>
 
 
 </body>
