--- a/src/main/resources/templates/getItem.html
+++ b/src/main/resources/templates/getItem.html
@@ -30,12 +30,8 @@
         <h3 th:text="'Name: ' + ${item.name}"></h3>
         <h3 th:text="'Description: ' + ${item.description}"></h3>
         <h3 th:text="'Current Bid: $' + ${item.currentBid}"></h3>
-        <h3 th:text="'Auction Start Time: ' + ${auctionStartTimeFormatted}"></h3>
-        <h3 th:text="'Auction End Time: ' + ${auctionEndTimeFormatted}"></h3>
-        <h3 th:if="${item.auctionComplete}">Auction Status: Complete</h3>
-        <h3 th:unless="${item.auctionComplete}">Auction Status: Incomplete</h3>
-        <h3 th:text="'Auction Start Time: ' + auctionStartTimeFormatted"></h3>
-        <h3 th:text="'Auction End Time: ' + auctionEndTimeFormatted"></h3>
+        <h3>Auction Start Time: <span id="auctionStartTimeFormatted"></span></h3>
+        <h3>Auction End Time: <span id="auctionEndTimeFormatted"></span></h3>
         <p id="demo"></p>
         <button id="bidButton">Place Bid</button>
 
@@ -53,8 +49,9 @@
                     <!-- Replace card details inputs with dropdown menus -->
                     <label for="paymentMethod">Select Card:</label>
                     <select name="paymentMethod" id="paymentMethod" required>
-                        <!-- Options will be dynamically populated using JavaScript -->
                     </select>
+                    <label for="cvv">CVV:</label>
+                    <input type="text" name="cvv" id="cvv" required />
 
                     <button type="submit">Place Bid</button>
                 </form>
@@ -68,13 +65,20 @@
     <script th:inline="javascript">
         /*<![CDATA[*/
         var itemName = /*[[${item.name}]]*/ '';
+        var itemName = /*[[${item.name}]]*/ '';
         var auctionStartTimeString = /*[[${item.auctionStartTime}]]*/ '';
         var auctionEndTimeString = /*[[${item.auctionEndTime}]]*/ '';
-        var auctionStartTimeFormatted = moment(auctionStartTimeString).format('YYYY-MM-DD HH:mm');
-        var auctionEndTimeFormatted = moment(auctionEndTimeString).format('YYYY-MM-DD HH:mm');
+       var auctionStartTimeFormatted = moment(auctionStartTimeString).format('YYYY-MM-DD');
+    var auctionEndTimeFormatted = moment(auctionEndTimeString).format('YYYY-MM-DD');
         /*]]>*/
     </script>
-
+    <script>
+        $(document).ready(function() {
+            // Display formatted auction start time and end time
+            $('#auctionStartTimeFormatted').text(auctionStartTimeFormatted);
+            $('#auctionEndTimeFormatted').text(auctionEndTimeFormatted);
+        });
+    </script>
     <script>
 
         $(document).ready(function() {
@@ -129,7 +133,6 @@
     </script>
 
     <script>
-
 
           $(document).ready(function() {
               // Function to populate payment methods dropdown
