Associating created items with their user

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -87,7 +87,7 @@
         </p>
 
 
-        <input style="display: none;" id="userId" type="text" name="userId"/>
+        <input id="userId" type="hidden" name="userId"/>
 
 
     </form>
