Payment method checking - still working on it

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -61,19 +61,19 @@
 
         <p>
             <label for="expirationMonth">Expiration Month: </label>
-            <input id= "expirationMonth" type="number" name="expirationMonth" required/> <br/>
+            <input id= "expirationMonth" type="number" step="1" name="expirationMonth" required/> <br/>
             <span class="required">*</span>
         </p>
 
         <p>
             <label for="expirationYear">Expiration Year: </label>
-            <input id= "expirationYear" type="number" name="expirationYear" required/> <br/>
+            <input id= "expirationYear" type="number" step="1" name="expirationYear" required/> <br/>
             <span class="required">*</span>
         </p>
 
         <p>
             <label for="cvv">CVV: </label>
-            <input id= "cvv" type="number" name="cvv" required/> <br/>
+            <input id= "cvv" type="number" name="cvv" step="1" required/> <br/>
             <span class="required">*</span>
         </p>
 
