Auction item addition input validation complete

--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -57,7 +57,7 @@
 
         <p>
             <label for="image">Picture (JPG, PNG, JPEG)</label>
-            <input type="file" id="image" name="image" required>
+            <input type="file" id="image" name="image" accept="image/jpeg, image/png, " required>
             <span class="required">*</span>
         </p>
 
