Registration validation and payment method delete functionality.

--- a/src/main/resources/static/account.css
+++ b/src/main/resources/static/account.css
@@ -4,8 +4,15 @@
 }
 
 .update {
-    height: 50px;
-    width: 100px;
+    height: 40px;
+    width: 50px;
     border-radius: 1em;
     background-color: limegreen;
+}
+
+.remove {
+    height: 40px;
+        width: 50px;
+        border-radius: 1em;
+        background-color: red;
 }
