--- a/src/main/resources/templates/manageItems.html
+++ b/src/main/resources/templates/manageItems.html
@@ -5,8 +5,8 @@
     <title>Account Page</title>
     <link th:href="@{/style.css}" rel="stylesheet"/>
     <link th:href="@{/login.css}" rel="stylesheet"/>
+    <link th:href="@{/manageItems.css}" rel="stylesheet"/>
     <link th:href="@{/account.css}" rel="stylesheet"/>
-    <link th:href="@{/styling.css}" rel="stylesheet"/>
 </head>
 <body>
 <header>
@@ -26,6 +26,7 @@
     <h1>Manage Items</h1>
 
     <h3>Manage Your Listed Items</h3>
+    <p>(Click item to edit)</p>
     <div id="userListedItems"></div>
 
     <h3>Your Saved Items</h3>
